--- a/paladin.html
+++ b/paladin.html
@@ -111,7 +111,7 @@
     <div class="personality-traits">
         <div class="header"><h1 data-i18n="personality traits"></h1>
         </div>
-        <div class="row 2autocolumn knight"><h2 data-i18n="Chivalry Bonus[©](total=90+, Honor 16+)"></h2>
+        <div class="row 2autocolumn knight"><h2 data-i18n="Chivalry Bonus[Â©](total=90+, Honor 16+)"></h2>
             <label data-i18n-title="enter chivalry bonus" title="enter chivalry bonus">
                 <input data-i18n-placeholder="chivalry bonus" name="attr_chivalry_bonus" placeholder="chivalry bonus" title="@{chivalry_bonus}" type="text" value=""/>
             </label>
@@ -121,12 +121,12 @@
                 <input data-i18n-placeholder="gentle woman bonus" name="attr_gentle_woman_bonus" placeholder="gentle woman bonus" title="@{gentle_woman_bonus}" type="text" value=""/>
             </label>
         </div>
-        <div class="row 2autocolumn"><h2 data-i18n="Religious Bonus[†](total=90+, Love[God])"></h2>
+        <div class="row 2autocolumn"><h2 data-i18n="Religious Bonus[â€ ](total=90+, Love[God])"></h2>
             <label data-i18n-title="enter religious bonus" title="enter religious bonus">
                 <input data-i18n-placeholder="religious bonus" name="attr_religious_bonus" placeholder="religious bonus" title="@{religious_bonus}" type="text" value=""/>
             </label>
         </div>
-        <div class="row 2autocolumn"><h2 data-i18n="Romantic Bonus[®](total=90+, Amor 16+)"></h2>
+        <div class="row 2autocolumn"><h2 data-i18n="Romantic Bonus[Â®](total=90+, Amor 16+)"></h2>
             <label data-i18n-title="enter romantic bonus" title="enter romantic bonus">
                 <input data-i18n-placeholder="romantic bonus" name="attr_romantic_bonus" placeholder="romantic bonus" title="@{gentle_woman_bonus}" type="text" value=""/>
             </label>
@@ -134,8 +134,8 @@
 
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="religious">†</span>
-                <span class="romantic">®</span>
+                <span class="religious">â€ </span>
+                <span class="romantic">Â®</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="chaste check" title="chaste check">
                 <input name="attr_chaste_check" title="@{chaste_check}" type="checkbox" value="chaste check"/>
@@ -157,7 +157,7 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
+                <span class="knight">Â©</span>
                 <span class="woman">*</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="energetic check" title="energetic check">
@@ -180,8 +180,8 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="religious">†</span>
-                <span class="romantic">®</span>
+                <span class="religious">â€ </span>
+                <span class="romantic">Â®</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="forgiving check" title="forgiving check">
                 <input name="attr_forgiving_check" title="@{forgiving_check}" type="checkbox" value="forgiving check"/>
@@ -203,8 +203,8 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
-                <span class="romantic">®</span>
+                <span class="knight">Â©</span>
+                <span class="romantic">Â®</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="generous check" title="generous check">
                 <input name="attr_generous_check" title="@{generous_check}" type="checkbox" value="generous check"/>
@@ -248,7 +248,7 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
+                <span class="knight">Â©</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="just check" title="just check">
                 <input name="attr_just_check" title="@{just_check}" type="checkbox" value="just check"/>
@@ -270,8 +270,8 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
-                <span class="religious">†</span>
+                <span class="knight">Â©</span>
+                <span class="religious">â€ </span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="merciful check" title="merciful check">
                 <input name="attr_merciful_check" title="@{merciful_check}" type="checkbox" value="merciful check"/>
@@ -293,9 +293,9 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
+                <span class="knight">Â©</span>
                 <span class="woman">*</span>
-                <span class="religious">†</span>
+                <span class="religious">â€ </span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="modest check" title="modest check">
                 <input name="attr_modest_check" title="@{modest_check}" type="checkbox" value="modest check"/>
@@ -318,7 +318,7 @@
         <div class="row traits">
             <div class="font-weight-bold">
                 <span class="woman">*</span>
-                <span class="romantic">®</span>
+                <span class="romantic">Â®</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="prudent check" title="prudent check">
                 <input name="attr_prudent_check" title="@{prudent_check}" type="checkbox" value="prudent check"/>
@@ -341,7 +341,7 @@
         <div class="row traits">
             <div class="font-weight-bold">
                 <span class="woman">*</span>
-                <span class="religious">†</span>
+                <span class="religious">â€ </span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="temperate check" title="temperate check">
                 <input name="attr_temperate_check" title="@{temperate_check}" type="checkbox" value="temperate check"/><span class="pictos">3</span>
@@ -362,8 +362,8 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="religious">†</span>
-                <span class="romantic">®</span>
+                <span class="religious">â€ </span>
+                <span class="romantic">Â®</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="trusting check" title="trusting check">
                 <input name="attr_trusting_check" title="@{trusting_check}" type="checkbox" value="trusting check"/>
@@ -385,7 +385,7 @@
         </div>
         <div class="row traits">
             <div class="font-weight-bold">
-                <span class="knight">©</span>
+                <span class="knight">Â©</span>
             </div>
             <label class="styled-checkbox grid" data-i18n-title="valorous check" title="valorous check">
                 <input name="attr_valorous_check" title="@{valorous_check}" type="checkbox" value="valorous check"/>
@@ -439,7 +439,6 @@
                 <span class="pictos">3</span>
             </label>
         </div>
-        
         <div class="row">
             <button class="text-capitalize" data-i18n="honor" name="roll_honor" type="roll" value="&{template:rolls} {{header=^{honor}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{honor}[Threshold]]]}}"></button>
             <label data-i18n-title="enter honor" title="enter honor">
@@ -459,7 +458,7 @@
                 <input name="attr_love_family_check" title="@{love_family_check}" type="checkbox" value="love family check"/>
                 <span class="pictos">3</span>
             </label>
-         </div>
+        </div>
         <div class="row">
             <button class="text-capitalize" data-i18n="love god" name="roll_love_god" type="roll" value="&{template:rolls} {{header=^{love god}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{love god}[Threshold]]]}}"></button>
             <label data-i18n-title="enter love god" title="enter love god">
@@ -568,7 +567,6 @@
                     <button class="d20" name="roll_standing" type="roll" value="&{template:rolls}{{header=@{name}}}{{dice=[[1d20[Roll]]]}} {{threshold=[[@{standing}[Threshold]]]}}">t</button>
                 </div>
             </fieldset>
-        </div>
         </div>
     </div>
     <div class="equipment-carried">
@@ -864,7 +862,7 @@
         <div class="row col-3 courtesy ">
             <button class="text-capitalize" data-i18n="courtesy" name="roll_courtesy" type="roll" value="&{template:rolls} {{header=^{courtesy}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{courtesy}[Threshold]]]}}"></button>
             <label data-i18n-title="enter courtesy" title="enter courtesy">
-            <span class="courtly_bonus">‡</span>
+            <span class="courtly_bonus">â€¡</span>
                 <input name="attr_courtesy" placeholder="#" title="@{courtesy}" type="number" value="0"/>
             </label>
             <label class="styled-checkbox grid" data-i18n-title="courtesy check" title="courtesy check">
@@ -875,7 +873,7 @@
         <div class="row col-3 dancing ">
             <button class="text-capitalize" data-i18n="dancing" name="roll_dancing" type="roll" value="&{template:rolls} {{header=^{dancing}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{dancing}[Threshold]]]}}"></button>
             <label data-i18n-title="enter dancing" title="enter dancing">
-            <span class="courtly_bonus">‡</span>
+            <span class="courtly_bonus">â€¡</span>
                 <input name="attr_dancing" placeholder="#" title="@{dancing}" type="number" value="0"/>
             </label>
             <label class="styled-checkbox grid" data-i18n-title="dancing check" title="dancing check">
@@ -886,7 +884,7 @@
         <div class="row col-3 eloquence ">
             <button class="text-capitalize" data-i18n="eloquence" name="roll_eloquence" type="roll" value="&{template:rolls} {{header=^{eloquence}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{eloquence}[Threshold]]]}}"></button>
             <label data-i18n-title="enter eloquence" title="enter eloquence">
-            <span class="courtly_bonus">‡</span>
+            <span class="courtly_bonus">â€¡</span>
                 <input name="attr_eloquence" placeholder="#" title="@{eloquence}" type="number" value="0"/>
             </label>
             <label class="styled-checkbox grid" data-i18n-title="eloquence check" title="eloquence check">
@@ -1041,7 +1039,7 @@
             </div>
             <label class="text"><h2 data-i18n="* +1 Bonus per 1000 Glory of target"></h2>
             </label>
-            <label class="text"><h2 data-i18n="‡ +1 Bonus per 1000 Glory"></h2>
+            <label class="text"><h2 data-i18n="â€¡ +1 Bonus per 1000 Glory"></h2>
             </label>
         </div>
         <div class="squire">
@@ -1686,7 +1684,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="row 2autocolumn">
-                                        <h2 data-i18n="cost £"></h2>
+                                        <h2 data-i18n="cost Â£"></h2>
                                         <label data-i18n-title="enter cost" title="enter cost">
                                             <input data-i18n-placeholder="cost" name="attr_cost" placeholder="cost" title="@{cost}" type="text" value=""/>
                                         </label>
@@ -1928,7 +1926,7 @@
                                             </label>
                                         </div>
                                         <div class="col 2autocolumn">
-                                            <h2 data-i18n="cost £"></h2>
+                                            <h2 data-i18n="cost Â£"></h2>
                                             <label data-i18n-title="enter cost" title="enter cost">
                                                 <input data-i18n-placeholder="cost" name="attr_cost" placeholder="cost" title="@{cost}" type="text" value=""/>
                                             </label>
@@ -2623,7 +2621,7 @@
             </div>
         </div>
         <div class="footer">
-            <span>©2016 Nocturnal Media. Permission granted to copy for personal use only.</span>
+            <span>Â©2016 Nocturnal Media. Permission granted to copy for personal use only.</span>
             <span>v. </span><span name="attr_version"></span>
         </div>
         <div class="rolltemplates">
